Fix overlapping text on tables of notifications
This commit changes the tables of notifications from 3 columns to two
columns. This is so the text has more room, so it doesn’t start
overlapping.

It also makes sure that if the recipient gets really long that it will
be cut off with an ellipsis, rather than overlapping…

I hypothesize that if a notification fails you probably don’t care when
it failed, just that it failed.

--- a/app/assets/stylesheets/components/table.scss
+++ b/app/assets/stylesheets/components/table.scss
@@ -40,7 +40,8 @@
       width: 52.5%;
       font-weight: normal;
 
-      .hint {
+      .hint,
+      p {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
